k8s-manifest/app-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: app
  name: app
spec:
  selector:
    matchLabels:
      name: app
  template:
    metadata:
      labels:
        name: app
    spec:
      containers:
      - image: 138913568231.dkr.ecr.us-east-1.amazonaws.com/stage/mjti-app:32
        imagePullPolicy: Always
        name: mjti-app
        resources:
          requests:
            memory: "384Mi"
            cpu: "200m"
        ports:
        - name: app-port
          containerPort: 8080
      imagePullSecrets:
      - name: ecrcreds
