k8s-manifest/db-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db
spec:
  serviceName: db-headless
  replicas: 1
  selector:
    matchLabels:
      name: db
  template:
    metadata:
      labels:
        name: db
    spec:
      containers:
        - name: mysql
          image: mjth/vprodb:1.4
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
          - name: db-volume
            mountPath: /var/lib/mysql
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
      terminationGracePeriodSeconds: 30
  volumeClaimTemplates:
    - metadata:
        name: db-volume
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: gp2
        resources:
          requests:
            storage: 3Gi
