k8s-manifest/mc-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: mc
  name: mc
spec:
  replicas: 1
  selector:
    matchLabels:
      name: mc
  template:
    metadata:
      labels:
        name: mc
    spec:
      containers:
      - image: memcached
        imagePullPolicy: Always
        name: memcached
        resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
