k8s-manifest/rmq-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: rmq
  name: rmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rmq
  template:
    metadata:
      labels:
        app: rmq
    spec:
      containers:
      - image: rabbitmq
        name: rabbitmq
        resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
