k8s-manifest/app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    role: app
  name: app01
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    name: app
