k8s-manifest/db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: db
  name: db01
spec:
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: db
