k8s-manifest/mc-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mc
  name: mc01
spec:
  ports:
  - port: 11211
    protocol: TCP
    targetPort: 11211
  selector:
    app: mc
