k8s-manifest/rmq-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    role: rmq
  name: rmq01
spec:
  ports:
  - port: 5672
    protocol: TCP
    targetPort: 5672
  selector:
    name: rmq
