k8s-manifest/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: profile-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: profile.mjeed.site
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: app01
            port:
              number: 8080
