k8s-manifest/mc-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mc-policy
spec:
  podSelector:
    matchLabels:
      name: mc
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          name: app
    ports:
    - port: 11211
